# rlkit

./: .gitignore  Dockerfile  README.md  app.py  requirements.extra.txt  requirements.txt  rl_trader.py  run_backtest_terminal.sh  timesfm_calibrator.py  timesfm_forecaster.py  xgb_trainer.py
backtest_server/: README.md  main.py
backtest_terminal/: .gitignore  README.md  package-lock.json  package.json
backtest_terminal/src/app/: page.tsx
freqtrade_userdir/: config.example.json  config.json
freqtrade_userdir/freqaimodels/: MyPPO.py
freqtrade_userdir/rl_lib/: __init__.py  env.py  signal.py  train_sb3.py  transformer_extractor.py
freqtrade_userdir/strategies/: MyRLStrategy.py  RLStrategy.py  XGBImpulseStrategy.py  XGBStackedStrategy.py  XGBTopBotStrategy.py
rl_lib/: autoencoder.py  env.py  features.py  forecast_transformer.py  meta.py  signal.py  timesfm_forecast.py  train_sb3.py  transformer_extractor.py
rl_lib/xgb/: __init__.py  common.py  globalcycle.py  impulse.py  logret.py  topbot.py  trendchange.py
scripts/: realtime_gui.py  realtime_tui.py  xgb_cli.py
snakelr/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-web.txt  requirements.txt
snakelr/scripts/: play_pygame.py  train_rllib.py  watch_trained.py
snakelr/snakelr/: __init__.py  register.py
snakelr/snakelr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
snakelr/snakelr/envs/: __init__.py  snake_env.py
snakelr/web/: app.py
